# eksnode

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  PROCESS.md  README.md  TODO.md  al2023_arm64.pkrvars.hcl  amazon-eks-al2023.pkr.hcl  efa.md  mkdocs.yml
ami/: .pre-commit-config.yaml  README.md  al2023_amd64.pkrvars.hcl  al2023_amd64_cis.pkrvars.hcl  al2023_amd64_gpu.pkrvars.hcl  al2023_amd64_neuron.pkrvars.hcl  al2023_amd64_nvidia.pkrvars.hcl  al2023_arm64.pkrvars.hcl  al2023_x86_64.pkrvars.hcl  amazon-eks-al2023.pkr.hcl  variables.pkr.hcl
ami/files/: bootstrap.sh  ecr-credential-provider-config.json  kubelet-config.json  ssm_user_data.sh
ami/playbooks/: .gitignore  README.md  al2023_playbook.yaml  ec2.tf  efa.yaml  install-temp.sh  main.tf  main.yaml  neuron.yaml  nvidia.yaml  outputs.tf
ami/playbooks/roles/accelerate/tasks/: main.yaml
ami/playbooks/roles/accelerate/vars/: main.yaml
ami/playbooks/roles/eks/defaults/: main.yaml
ami/playbooks/roles/eks/files/: containerd.service  eni-max-pods.txt  kubelet.service  logrotate.conf  systctl.conf
ami/playbooks/roles/eks/tasks/: main.yaml
ami/playbooks/roles/eks/vars/: main.yaml
ami/playbooks/roles/gpu/tasks/: main.yaml
ami/playbooks/roles/harden/tasks/: main.yaml
ami/playbooks/vars/: accelerated.yaml  versions.yaml
cli/: Cargo.toml
cli/src/: cli.rs  image.rs  imds.rs  lib.rs  main.rs  resource.rs  utils.rs
docs/: .pages  accelerated.md  compliance.md  directory.md  foo.md  gpu.md  images.md  index.md
docs/stylesheets/: extra.css
eks/: amazon-eks-al2023.pkr.hcl
eks-gpu/: al2023_arm64.pkrvars.hcl  variables.pkr.hcl
eksami/: Cargo.toml
eksami-gen/: Cargo.toml  README.md
eksami-gen/src/: main.rs
eksami-gen/templates/: ec2.tpl  ec2_instances.tpl  eni-max-pods.tpl
eksami/src/: cli.rs  containerd.rs  ec2.rs  ec2_instances.rs  eks.rs  fs.rs  gpu.rs  imds.rs  kubelet.rs  lib.rs  main.rs  resource.rs
eksami/src/snapshots/: eksami__containerd__tests__it_serializes_containerd_config-2.snap  eksami__containerd__tests__it_serializes_containerd_config.snap  eksami__kubelet__tests__it_serializes_kubelete_config-2.snap  eksami__kubelet__tests__it_serializes_kubelete_config.snap
eksnode/: Cargo.toml  README.md
eksnode-cis/: Cargo.toml
eksnode-cis/src/: lib.rs
eksnode-cis/src/checks/: node.yaml
eksnode-cis/src/eks/: mod.rs  node.rs
eksnode-gen/: Cargo.toml  README.md
eksnode-gen/src/: ec2.rs  lib.rs  main.rs  versions.rs
eksnode-gen/templates/: ec2-instances.tpl  ec2.tpl  eni-max-pods.tpl  versions.tpl
eksnode/files/: ec2-instances.yaml  validate.yaml
eksnode/src/: bootstrap.rs  cli.rs  containerd.rs  ec2.rs  ecr.rs  eks.rs  gpu.rs  imds.rs  kubelet.rs  lib.rs  main.rs  resource.rs  utils.rs
eksnode/src/commands/: calc.rs  calculate.rs  debug.rs  fetch.rs  join.rs  mod.rs  pull.rs  validate.rs  versions.rs
eksnode/src/commands/snapshots/: eksnode__commands__join__tests__it_gets_kubelet_kubeconfig_eks.snap  eksnode__commands__join__tests__it_gets_kubelet_kubeconfig_local.snap  eksnode__commands__pull__tests__it_gets_images_to_cache_apeast1_124.snap  eksnode__commands__pull__tests__it_gets_images_to_cache_apeast1_127.snap  eksnode__commands__pull__tests__it_gets_images_to_cache_useast1_124.snap  eksnode__commands__pull__tests__it_gets_images_to_cache_useast1_127.snap  eksnode__commands__pull__tests__it_gets_images_to_cache_usgoveast1_fips_124.snap  eksnode__commands__pull__tests__it_gets_images_to_cache_usgoveast1_fips_127.snap
eksnode/src/containerd/: ex.toml  mod.rs
eksnode/src/containerd/snapshots/: eksnode__containerd__tests__it_creates_containerd_config-2.snap  eksnode__containerd__tests__it_creates_containerd_config.snap  eksnode__containerd__tests__it_creates_neuron_containerd_config.snap  eksnode__containerd__tests__it_creates_nvidia_containerd_config.snap  eksnode__containerd__tests__it_creates_sandbox_image_service.snap  eksnode__containerd__tests__it_serializes_containerd_config-2.snap  eksnode__containerd__tests__it_serializes_containerd_config.snap
eksnode/src/containerd/templates/: containerd-config.toml
eksnode/src/kubelet/: args.rs  config.rs  credential.rs  kubeconfig.rs  mod.rs
eksnode/src/kubelet/snapshots/: eksnode__kubelet__args__tests__it_creates_args.snap  eksnode__kubelet__args__tests__it_creates_empty_extrargs.snap  eksnode__kubelet__args__tests__it_creates_extrargs.snap  eksnode__kubelet__config__tests__it_serializes_kubelet_config-2.snap  eksnode__kubelet__config__tests__it_serializes_kubelet_config.snap  eksnode__kubelet__credential__tests__it_creates_v1-2.snap  eksnode__kubelet__credential__tests__it_creates_v1.snap  eksnode__kubelet__credential__tests__it_creates_v1alpha1-2.snap  eksnode__kubelet__credential__tests__it_creates_v1alpha1.snap  eksnode__kubelet__credential__tests__it_serializes_credential_provider-2.snap  eksnode__kubelet__credential__tests__it_serializes_credential_provider.snap  eksnode__kubelet__kubeconfig__tests__it_creates_kubeconfig-2.snap  eksnode__kubelet__kubeconfig__tests__it_creates_kubeconfig.snap  eksnode__kubelet__kubeconfig__tests__it_serializes_kubeconfig-2.snap  eksnode__kubelet__kubeconfig__tests__it_serializes_kubeconfig.snap
eksnode/src/snapshots/: eksnode__bootstrap__tests__it_gets_kubelet_kubeconfig_eks.snap  eksnode__bootstrap__tests__it_gets_kubelet_kubeconfig_local.snap  eksnode__containerd__tests__it_creates_containerd_config-2.snap  eksnode__containerd__tests__it_serializes_containerd_config.snap  eksnode__kubelet__tests__it_serializes_kubelet_config-2.snap  eksnode__kubelet__tests__it_serializes_kubelet_config.snap
eksnode/templates/: containerd-config.toml  sandbox-image.service
eksnode/tests/: calculate_max_pods.rs
files/: bootstrap.sh  eni-max-pods.txt  kubelet-config.json
tests/: calculate_max_pods.rs
tests/fixtures/: ec2.tf  main.tf  outputs.tf
