[package]
name = "eksami-gen"
version = "0.1.0"
authors = ["Bryant Biggs <bryantbiggs@gmail.com>"]
description = "Script-like crate for generating files used by `eksami` or image creation process"
documentation = "https://github.com/clowdhaus/exp-amazon-eks-ami"
homepage = "https://github.com/clowdhaus/exp-amazon-eks-ami"
repository = "https://github.com/clowdhaus/exp-amazon-eks-ami"
license = "Apache-2.0"
edition = "2021"
categories = [
  "command-line-utilities",
  "kubernetes",
]

[dependencies]
anyhow = "1.0"
aws-config = "0.55"
aws-sdk-ec2 = "0.28"
aws-types = "0.55"
handlebars = "4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.23", features = ["full"] }
tokio-stream = "0.1"
