[package]
name = "eksnode-gen"
version = "0.1.0"
authors = ["Bryant Biggs <bryantbiggs@gmail.com>"]
description = "Script-like crate for generating files used by `eksnode` or image creation process"
documentation = "https://github.com/clowdhaus/eksnode"
homepage = "https://github.com/clowdhaus/eksnode"
repository = "https://github.com/clowdhaus/eksnode"
license = "Apache-2.0"
edition = "2021"
categories = [
  "command-line-utilities",
  "kubernetes",
]

[dependencies]
anyhow = "1.0"
aws-config = "0.56"
aws-sdk-ec2 = "0.30"
aws-types = "0.56"
eksnode = { path = "../eksnode", version ="*"}
handlebars = "4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.23", features = ["full"] }
tokio-stream = "0.1"
