[package]
name = "eksnode-gen"
version = "0.1.0"
authors.workspace = true
description = "Script-like crate for generating files used by `eksnode` and/or image creation process"
documentation = "https://github.com/clowdhaus/eksnode"
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
categories.workspace = true
exclude = [".*"]
include = ["/src", "/templates", "Cargo.toml", "REAMDE.md"]

[dependencies]
anstyle.workspace = true
anyhow.workspace = true
aws-config.workspace = true
aws-sdk-ec2.workspace = true
aws-sdk-s3 = "1.82"
aws-types.workspace = true
clap.workspace = true
clap-verbosity-flag.workspace = true
eksnode = { path = "../eksnode", version ="*"}
handlebars = "6.3"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tokio-stream.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin_include)"] }
