[package]
name = "eksnode"
version = "0.1.0"
authors.workspace = true
description = "A command line interface for interacting with EKS nodes"
documentation = "https://github.com/clowdhaus/eksnode"
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
categories.workspace = true
exclude = [".*"]
include = ["/files", "/src", "/templates", "Cargo.toml", "REAMDE.md"]

default-run = "eksnode"

[[bin]]
name = "eksnode"
path = "src/main.rs"

[dependencies]
anstyle.workspace = true
anyhow.workspace = true
aws-config.workspace = true
aws-sdk-ec2.workspace = true
aws-sdk-ecr = "1.1"
aws-sdk-eks = "1.1"
aws-types.workspace = true
base64 = "0.22"
clap.workspace = true
clap-verbosity-flag.workspace = true
containerd-client = "0.8"
# config = { version = "0.13", features = ["json", "yaml", "toml"] }
dns-lookup = "2.0"
rust-embed = { version = "8.0", features = ["compression"] }
http = "1.0"
ipnet = {version = "2.7", features = ["json"]}
num_cpus = "1.16"
rand = "0.9"
regex-lite.workspace = true
semver = "1.0"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tabled = "0.18"
taplo = "0.13"
tokio.workspace = true
toml = "0.8"
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
walkdir = { version = "2.4", default-features = false }
zip = { version = "2.1" }

[dev-dependencies]
assert_cmd = "2.0"
escargot = "0.5"
insta = "1.29"
rstest = "0.24"
tempfile = "3.6"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin_include)"] }
